--- a/css/style.v2.css
+++ b/css/style.v2.css
@@ -1426,23 +1426,21 @@ figcaption {
 .project-large-image-container {
   position: relative;
   z-index: 2;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
+  align-items: center;
+  border: 6px solid transparent;
+}
+
+.project-small-image-container {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   border: 6px solid transparent;
 }
